@@ -17,7 +17,6 @@
 package org.keycloak.models.cache.infinispan.authorization;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -459,7 +458,7 @@ public class StoreFactoryCacheSession implements CachedStoreFactoryProvider {
             }
 
             if (cached == null) {
-                Long loaded = cache.getCurrentRevision(id);
+                long loaded = cache.getCurrentRevision(id);
                 if (! modelMightExist(id)) return null;
                 ResourceServer model = getResourceServerStoreDelegate().findById(id);
                 if (model == null) {
@@ -518,7 +517,7 @@ public class StoreFactoryCacheSession implements CachedStoreFactoryProvider {
                 logger.tracev("by id cache hit: {0}", cached.getId());
             }
             if (cached == null) {
-                Long loaded = cache.getCurrentRevision(id);
+                long loaded = cache.getCurrentRevision(id);
                 if (! modelMightExist(id)) return null;
                 Scope model = getScopeStoreDelegate().findById(resourceServer, id);
                 if (model == null) {
@@ -548,7 +547,7 @@ public class StoreFactoryCacheSession implements CachedStoreFactoryProvider {
                 logger.tracev("scope by name cache hit: {0}", name);
             }
             if (query == null) {
-                Long loaded = cache.getCurrentRevision(cacheKey);
+                long loaded = cache.getCurrentRevision(cacheKey);
                 Scope model = getScopeStoreDelegate().findByName(resourceServer, name);
                 if (model == null) return null;
                 if (invalidations.contains(model.getId())) return model;
@@ -611,7 +610,7 @@ public class StoreFactoryCacheSession implements CachedStoreFactoryProvider {
                 logger.tracev("by id cache hit: {0}", cached.getId());
             }
             if (cached == null) {
-                Long loaded = cache.getCurrentRevision(id);
+                long loaded = cache.getCurrentRevision(id);
                 if (! modelMightExist(id)) return null;
                 Resource model = getResourceStoreDelegate().findById(resourceServer, id);
                 if (model == null) {
@@ -643,7 +642,7 @@ public class StoreFactoryCacheSession implements CachedStoreFactoryProvider {
                             return Collections.emptyList();
                         }
 
-                        return Arrays.asList(resource);
+                        return List.of(resource);
                     },
                     (revision, resources) -> new ResourceListQuery(revision, cacheKey, resources.stream().map(Resource::getId).collect(Collectors.toSet()), resourceServerId), resourceServer);
 
@@ -668,14 +667,10 @@ public class StoreFactoryCacheSession implements CachedStoreFactoryProvider {
             String cacheKey = getResourceByOwnerCacheKey(ownerId, resourceServerId);
             cacheQuery(cacheKey, ResourceListQuery.class, () -> {
                         List<Resource> resources = new ArrayList<>();
-                        getResourceStoreDelegate().findByOwner(resourceServer, ownerId, new Consumer<Resource>() {
-                            @Override
-                            public void accept(Resource resource) {
+                        getResourceStoreDelegate().findByOwner(resourceServer, ownerId, resource ->
                                 consumer.andThen(resources::add)
                                         .andThen(StoreFactoryCacheSession.this::cacheResource)
-                                        .accept(resource);
-                            }
-                        });
+                                        .accept(resource));
                         return resources;
                     },
                     (revision, resources) -> new ResourceListQuery(revision, cacheKey, resources.stream().map(Resource::getId).collect(Collectors.toSet()), resourceServerId), resourceServer, consumer);
@@ -714,15 +709,10 @@ public class StoreFactoryCacheSession implements CachedStoreFactoryProvider {
                 String cacheKey = getResourceByScopeCacheKey(scope.getId(), resourceServerId);
                 cacheQuery(cacheKey, ResourceScopeListQuery.class, () -> {
                     List<Resource> resources = new ArrayList<>();
-                    getResourceStoreDelegate().findByScopes(resourceServer, Collections.singleton(scope), new Consumer<Resource>() {
-                        @Override
-                        public void accept(Resource resource) {
-                            consumer.andThen(resources::add)
+                    getResourceStoreDelegate().findByScopes(resourceServer, Collections.singleton(scope),
+                            resource -> consumer.andThen(resources::add)
                                     .andThen(StoreFactoryCacheSession.this::cacheResource)
-                                    .accept(resource);
-                            
-                        }
-                    });
+                                    .accept(resource));
                     return resources;
                 }, (revision, resources) -> new ResourceScopeListQuery(revision, cacheKey, scope.getId(), resources.stream().map(Resource::getId).collect(Collectors.toSet()), resourceServerId), resourceServer, consumer);
             }
@@ -744,14 +734,10 @@ public class StoreFactoryCacheSession implements CachedStoreFactoryProvider {
             String cacheKey = getResourceByTypeCacheKey(type, resourceServerId);
             cacheQuery(cacheKey, ResourceListQuery.class, () -> {
                         List<Resource> resources = new ArrayList<>();
-                        getResourceStoreDelegate().findByType(resourceServer, type, new Consumer<Resource>() {
-                            @Override
-                            public void accept(Resource resource) {
+                        getResourceStoreDelegate().findByType(resourceServer, type, resource ->
                                 consumer.andThen(resources::add)
                                         .andThen(StoreFactoryCacheSession.this::cacheResource)
-                                        .accept(resource);
-                            }
-                        });
+                                        .accept(resource));
                         return resources;
                     },
                     (revision, resources) -> new ResourceListQuery(revision, cacheKey, resources.stream().map(Resource::getId).collect(Collectors.toSet()), resourceServerId), resourceServer, consumer);
@@ -764,14 +750,10 @@ public class StoreFactoryCacheSession implements CachedStoreFactoryProvider {
             String cacheKey = getResourceByTypeCacheKey(type, owner, resourceServerId);
             cacheQuery(cacheKey, ResourceListQuery.class, () -> {
                         List<Resource> resources = new ArrayList<>();
-                        getResourceStoreDelegate().findByType(resourceServer, type, owner, new Consumer<Resource>() {
-                            @Override
-                            public void accept(Resource resource) {
-                                consumer.andThen(resources::add)
+                        getResourceStoreDelegate().findByType(resourceServer, type, owner,
+                                resource -> consumer.andThen(resources::add)
                                         .andThen(StoreFactoryCacheSession.this::cacheResource)
-                                        .accept(resource);
-                            }
-                        });
+                                        .accept(resource));
                         return resources;
                     },
                     (revision, resources) -> new ResourceListQuery(revision, cacheKey, resources.stream().map(Resource::getId).collect(Collectors.toSet()), resourceServerId), resourceServer, consumer);
@@ -784,14 +766,10 @@ public class StoreFactoryCacheSession implements CachedStoreFactoryProvider {
             String cacheKey = getResourceByTypeInstanceCacheKey(type, resourceServerId);
             cacheQuery(cacheKey, ResourceListQuery.class, () -> {
                         List<Resource> resources = new ArrayList<>();
-                        getResourceStoreDelegate().findByTypeInstance(resourceServer, type, new Consumer<Resource>() {
-                            @Override
-                            public void accept(Resource resource) {
-                                consumer.andThen(resources::add)
+                        getResourceStoreDelegate().findByTypeInstance(resourceServer, type,
+                                resource -> consumer.andThen(resources::add)
                                         .andThen(StoreFactoryCacheSession.this::cacheResource)
-                                        .accept(resource);
-                            }
-                        });
+                                        .accept(resource));
                         return resources;
                     },
                     (revision, resources) -> new ResourceListQuery(revision, cacheKey, resources.stream().map(Resource::getId).collect(Collectors.toSet()), resourceServerId), resourceServer, consumer);
@@ -812,7 +790,7 @@ public class StoreFactoryCacheSession implements CachedStoreFactoryProvider {
             }
             List<R> model = Collections.emptyList();
             if (query == null) {
-                Long loaded = cache.getCurrentRevision(cacheKey);
+                long loaded = cache.getCurrentRevision(cacheKey);
                 model = resultSupplier.get();
                 if (model == null) return null;
                 if (!invalidations.contains(cacheKey)) {
@@ -884,7 +862,7 @@ public class StoreFactoryCacheSession implements CachedStoreFactoryProvider {
             if (cached == null) {
                 if (! modelMightExist(id)) return null;
                 Policy model = getPolicyStoreDelegate().findById(resourceServer, id);
-                Long loaded = cache.getCurrentRevision(id);
+                long loaded = cache.getCurrentRevision(id);
                 if (model == null) {
                     setModelDoesNotExists(id, loaded);
                     return null;
@@ -914,7 +892,7 @@ public class StoreFactoryCacheSession implements CachedStoreFactoryProvider {
                     return Collections.emptyList();
                 }
 
-                return Arrays.asList(policy);
+                return List.of(policy);
             }, (revision, policies) -> new PolicyListQuery(revision, cacheKey, policies.stream().map(Policy::getId).collect(Collectors.toSet()), resourceServerId), resourceServer);
 
             if (result.isEmpty()) {
@@ -948,14 +926,10 @@ public class StoreFactoryCacheSession implements CachedStoreFactoryProvider {
             String cacheKey = getPolicyByResource(resource.getId(), resourceServerId);
             cacheQuery(cacheKey, PolicyResourceListQuery.class, () -> {
                         List<Policy> policies = new ArrayList<>();
-                        getPolicyStoreDelegate().findByResource(resourceServer, resource, new Consumer<Policy>() {
-                            @Override
-                            public void accept(Policy policy) {
-                                consumer.andThen(policies::add)
+                        getPolicyStoreDelegate().findByResource(resourceServer, resource,
+                                policy -> consumer.andThen(policies::add)
                                         .andThen(StoreFactoryCacheSession.this::cachePolicy)
-                                        .accept(policy);
-                            }
-                        });
+                                        .accept(policy));
                         return policies;
                     },
                     (revision, policies) -> new PolicyResourceListQuery(revision, cacheKey, resource.getId(), policies.stream().map(Policy::getId).collect(Collectors.toSet()), resourceServerId), resourceServer, consumer);
@@ -975,14 +949,10 @@ public class StoreFactoryCacheSession implements CachedStoreFactoryProvider {
             String cacheKey = getPolicyByResourceType(resourceType, resourceServerId);
             cacheQuery(cacheKey, PolicyResourceListQuery.class, () -> {
                         List<Policy> policies = new ArrayList<>();
-                        getPolicyStoreDelegate().findByResourceType(resourceServer, resourceType, new Consumer<Policy>() {
-                            @Override
-                            public void accept(Policy policy) {
-                                consumer.andThen(policies::add)
+                        getPolicyStoreDelegate().findByResourceType(resourceServer, resourceType,
+                                policy -> consumer.andThen(policies::add)
                                         .andThen(StoreFactoryCacheSession.this::cachePolicy)
-                                        .accept(policy);
-                            }
-                        });
+                                        .accept(policy));
                         return policies;
                     },
                     (revision, policies) -> new PolicyResourceListQuery(revision, cacheKey, resourceType, policies.stream().map(Policy::getId).collect(Collectors.toSet()), resourceServerId), resourceServer, consumer);
@@ -996,7 +966,7 @@ public class StoreFactoryCacheSession implements CachedStoreFactoryProvider {
 
             for (Scope scope : scopes) {
                 String cacheKey = getPolicyByScope(scope.getId(), resourceServerId);
-                result.addAll(cacheQuery(cacheKey, PolicyScopeListQuery.class, () -> getPolicyStoreDelegate().findByScopes(resourceServer, Collections.singletonList(scope)), (revision, resources) -> new PolicyScopeListQuery(revision, cacheKey, scope.getId(), resources.stream().map(resource -> resource.getId()).collect(Collectors.toSet()), resourceServerId), resourceServer));
+                result.addAll(cacheQuery(cacheKey, PolicyScopeListQuery.class, () -> getPolicyStoreDelegate().findByScopes(resourceServer, Collections.singletonList(scope)), (revision, resources) -> new PolicyScopeListQuery(revision, cacheKey, scope.getId(), resources.stream().map(Policy::getId).collect(Collectors.toSet()), resourceServerId), resourceServer));
             }
 
             return new ArrayList<>(result);
@@ -1025,11 +995,9 @@ public class StoreFactoryCacheSession implements CachedStoreFactoryProvider {
                 cacheQuery(cacheKey, PolicyScopeListQuery.class, () -> {
                     List<Policy> policies = new ArrayList<>();
                     getPolicyStoreDelegate().findByScopes(resourceServer, resource, Collections.singletonList(scope),
-                            policy -> {
-                                consumer.andThen(policies::add)
-                                        .andThen(StoreFactoryCacheSession.this::cachePolicy)
-                                        .accept(policy);
-                            });
+                            policy -> consumer.andThen(policies::add)
+                                    .andThen(StoreFactoryCacheSession.this::cachePolicy)
+                                    .accept(policy));
                     return policies;
                 }, (revision, resources) -> new PolicyScopeListQuery(revision, cacheKey, scope.getId(), resources.stream().map(Policy::getId).collect(Collectors.toSet()), resourceServerId), resourceServer, consumer);
             }
@@ -1070,7 +1038,7 @@ public class StoreFactoryCacheSession implements CachedStoreFactoryProvider {
             }
             List<R> model = Collections.emptyList();
             if (query == null) {
-                Long loaded = cache.getCurrentRevision(cacheKey);
+                long loaded = cache.getCurrentRevision(cacheKey);
                 model = resultSupplier.get();
                 if (model == null) return null;
                 if (!invalidations.contains(cacheKey)) {
@@ -1085,7 +1053,9 @@ public class StoreFactoryCacheSession implements CachedStoreFactoryProvider {
 
                 if (consumer != null) {
                     for (String id : policies) {
-                        consumer.accept((R) findById(resourceServer, id));
+                        Policy policy = findById(resourceServer, id);
+                        if (policy != null)
+                            consumer.accept((R) policy);
                     }
                 } else {
                     model = policies.stream().map(resourceId -> (R) findById(resourceServer, resourceId))
@@ -1139,7 +1109,7 @@ public class StoreFactoryCacheSession implements CachedStoreFactoryProvider {
                 logger.tracev("by id cache hit: {0}", cached.getId());
             }
             if (cached == null) {
-                Long loaded = cache.getCurrentRevision(id);
+                long loaded = cache.getCurrentRevision(id);
                 if (! modelMightExist(id)) return null;
                 PermissionTicket model = getPermissionTicketStoreDelegate().findById(resourceServer, id);
                 if (model == null) {
@@ -1212,7 +1182,7 @@ public class StoreFactoryCacheSession implements CachedStoreFactoryProvider {
                 logger.tracev("cache hit for key: {0}", cacheKey);
             }
             if (query == null) {
-                Long loaded = cache.getCurrentRevision(cacheKey);
+                long loaded = cache.getCurrentRevision(cacheKey);
                 List<R> model = resultSupplier.get();
                 if (model == null) return null;
                 if (invalidations.contains(cacheKey)) return model;
@@ -1240,7 +1210,7 @@ public class StoreFactoryCacheSession implements CachedStoreFactoryProvider {
     }
 
     CachedPolicy createCachedPolicy(Policy model, String id) {
-        Long loaded = cache.getCurrentRevision(id);
+        long loaded = cache.getCurrentRevision(id);
         return new CachedPolicy(loaded, model);
     }
 
@@ -1249,7 +1219,7 @@ public class StoreFactoryCacheSession implements CachedStoreFactoryProvider {
         if (cache.getCache().containsKey(id)) {
             return;
         }
-        Long loaded = cache.getCurrentRevision(id);
+        long loaded = cache.getCurrentRevision(id);
         if (!modelMightExist(id)) {
             return;
         }
@@ -1262,7 +1232,7 @@ public class StoreFactoryCacheSession implements CachedStoreFactoryProvider {
         if (cache.getCache().containsKey(id)) {
             return;
         }
-        Long loaded = cache.getCurrentRevision(id);
+        long loaded = cache.getCurrentRevision(id);
         if (!modelMightExist(id)) {
             return;
         }
